distro_bootcmd: add secondary search location support

--- a/configs/libretech-ac_defconfig
+++ b/configs/libretech-ac_defconfig
@@ -82,3 +82,4 @@ CONFIG_SYS_WHITE_ON_BLACK=y
 CONFIG_VIDEO_MESON=y
 CONFIG_VIDEO_DT_SIMPLEFB=y
 CONFIG_OF_LIBFDT_OVERLAY=y
+CONFIG_DEFAULT_FDT_FILE="libre-computer/aml-s805x-ac/platform.dtb"
