aml-s805x-ac: defconfig: change board name

--- a/configs/libretech-ac_defconfig
+++ b/configs/libretech-ac_defconfig
@@ -10,7 +10,7 @@ CONFIG_MESON_GXL=y
 CONFIG_NR_DRAM_BANKS=1
 CONFIG_DEBUG_UART_BASE=0xc81004c0
 CONFIG_DEBUG_UART_CLOCK=24000000
-CONFIG_IDENT_STRING=" libretech-ac"
+CONFIG_IDENT_STRING=" Libre Computer AML-S805X-AC"
 CONFIG_DEBUG_UART=y
 CONFIG_OF_BOARD_SETUP=y
 CONFIG_USE_PREBOOT=y
