aml-s805x-ac: defconfig: add menukey

--- a/configs/libretech-ac_defconfig
+++ b/configs/libretech-ac_defconfig
@@ -84,3 +84,6 @@ CONFIG_VIDEO_MESON=y
 CONFIG_VIDEO_DT_SIMPLEFB=y
 CONFIG_OF_LIBFDT_OVERLAY=y
 CONFIG_DEFAULT_FDT_FILE="libre-computer/aml-s805x-ac/platform.dtb"
+CONFIG_AUTOBOOT_USE_MENUKEY=y
+CONFIG_AUTOBOOT_MENUKEY=27
+CONFIG_AUTOBOOT_PROMPT="Press ESC for menu."
