--- a/configs/libretech-cc_defconfig
+++ b/configs/libretech-cc_defconfig
@@ -65,3 +65,4 @@ CONFIG_SYS_WHITE_ON_BLACK=y
 CONFIG_VIDEO_MESON=y
 CONFIG_VIDEO_DT_SIMPLEFB=y
 CONFIG_OF_LIBFDT_OVERLAY=y
+CONFIG_DEFAULT_FDT_FILE="libre-computer/aml-s905x-cc/platform.dtb"
